# BenchRep-T

./: .gitignore  LICENSE  README.md  pyproject.toml
bash/: README.md  run_abmil_demo_features.sh  run_abmil_demographic.sh  run_abmil_driver.sh  run_deeprc.sh  run_deeprc.slurm  run_deeprc_driver.sh  run_deeprc_scaling.sh  run_deeprc_scaling.slurm  run_deeptcr.sh  run_deeptcr_demographic.sh  run_driver_sequence_xgboost_experiments.sh  run_ensemble_abmil.sh  run_ensemble_regression.sh  run_ensemble_xgboost.sh  run_giana.sh  run_giana_driver.sh  run_giana_scaling.sh  run_giana_scaling.slurm  run_process_vdjdb.sh  run_remaining_xgboost_experiments.sh  run_resource_benchmark.sh  run_xgboost_ext_RA.sh  run_xgboost_ext_T1D.sh  run_xgboost_ext_Tb.sh  run_xgboost_scaling_50k.sh  run_xgboost_scaling_75k.sh
data_preprocessing/: CLEAN_TCR_DATA.md  CLEAN_TCR_DATA_TO_AIRR.md  clean_tcr_data.py  clean_tcr_data_to_airr.py
evals/: __init__.py  abmil_demographics_disease_classification.py  compute_overall_metrics.py  compute_random_baseline_recall.py  deeprc_2020_disease_classification.py  deeprc_2020_driver_identification.py  deeptcr_2021_disease_classification.py  deeptcr_2021_driver_identification.py  deeptcr_demographics_disease_classification.py  demographic_features_disease_classification.py  emerson_2017_disease_classification.py  emerson_2017_driver_identification.py  ensemble_abmil_disease_classification.py  ensemble_abmil_driver_identification.py  ensemble_regression_disease_classification.py  ensemble_regression_driver_identification.py  external_evaluation.py  (+15 more)
(+81 files in other folders)
